--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script defer src="index.js"></script>
 </head>
 <body>
-    <h1>hello world
-
-    </h1>
+    <h1>hello world</h1>
+    <h2>hello all</h2>
 </body>
 </html>
